--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -6,7 +6,7 @@ import { HomePage } from "vocs/components";
 
 <HomePage.Root>
   <HomePage.Logo />
-  <HomePage.Tagline>My Awesome Docs</HomePage.Tagline>
+  <HomePage.Tagline>Ruku Docs</HomePage.Tagline>
   <HomePage.InstallPackage name="vocs" type="init" />
   <HomePage.Description>
     This is a description of my documentation website.
@@ -15,7 +15,7 @@ import { HomePage } from "vocs/components";
     <HomePage.Button href="/getting-started" variant="accent">
       Get started
     </HomePage.Button>
-    <HomePage.Button href="https://github.com/wevm/vocs">
+    <HomePage.Button href="https://github.com/RukuLab/ruku">
       GitHub
     </HomePage.Button>
   </HomePage.Buttons>
